# cloud-gaming-in-a-box

./: .gitattributes  .gitignore  .gitmodules  README.md  build.sh  copy_savegame.sh  proton_run.sh  pyrightconfig.json  run.sh  run_libreoffice.sh  run_scenarios.py  run_vsync.sh  slides.odp
apps/: autoexec_postinit.cfg  hatintime.sh  localc.sh
cfg/: proton.sh  vsync.sh
frontend/: CMakeLists.txt  av.hpp
scenarios/: baseline.sh  delay1.sh  delay2.sh  delay3.sh  loss1.sh  loss2.sh  mixed1.sh  mixed2.sh  mixed3.sh
scripts/: change_cloud_morph_ports.sh  example_5004.sdp  ffmpeg_av_stream.sh  ffmpeg_play.sh  ffmpeg_stream.sh  run_app.sh  run_cloud_morph.sh  run_proxy_measure.sh  start_toxiproxy.sh  start_udp_proxies.sh  udp_proxy.py
scripts/testing/: ffmpeg_play.sh  ffmpeg_stream.sh  netcat_listen_udp.sh  netcat_send_udp.sh  netcat_spam.sh  stream.sdp  test_warsow_xvfb.sh
src/: CMakeLists.txt
src/frontend/: AudioService.cpp  AudioService.hpp  VideoService.cpp  VideoService.hpp  av.cpp  av.hpp  frontend.cpp  ui.cpp  ui.hpp
src/input/: protocol.cpp  protocol.hpp
src/network/: input.cpp  input.hpp  socket.cpp  socket.hpp
src/socket/: tcp.cpp  tcp.hpp
src/syncinput/: event.cpp  event.hpp  syncinput.cpp  xorg_test_main.cpp
src/syncinput/input/: input_sender_base.hpp  xorg.cpp  xorg.hpp
src/syncinput/input_sender/: input_sender.hpp  input_sender_base.hpp  xorg.cpp  xorg.hpp
study/: data.csv  merge_raw.py  plot.py  plot_baseline_context.py  plot_utils.py
study/l/: results_1688633190.881886.csv  results_1688635939.8326774.csv  results_1688643237.3342004.csv  results_1688645154.5942347.csv  results_1688647107.4149675.csv  results_1688650388.8220592.csv  results_1688652251.7178016.csv  results_1688654392.4820733.csv
study/r/: results_1688633250.0052965.csv  results_1688645158.7333357.csv  results_1688650426.255335.csv  results_1688652254.3885765.csv  results_1688654447.2928376.csv
study/raw/: results_1688633190.881886.csv  results_1688633250.0052965.csv  results_1688635939.8326774.csv  results_1688643237.3342004.csv  results_1688645154.5942347.csv  results_1688645158.7333357.csv  results_1688647107.4149675.csv  results_1688650388.8220592.csv  results_1688650426.255335.csv  results_1688652251.7178016.csv  results_1688652254.3885765.csv  results_1688654392.4820733.csv  results_1688654447.2928376.csv  results_1689094429.0789688.csv
survey/: run_scenarios.py
survey/hatintime/: copy_savegame.sh  slot2.hat
syncinput/: CMakeLists.txt  event.hpp  input.hpp  syncinput.cpp  syncinput_win.cpp  tcp.cpp  xorg_test_main.cpp
